feat: implement recharge functionality with controller, service, and DTOs refactor: update settings and dependencies, enhance security configuration refactor: modify Account and Model classes to include new fields refactor: update UserService to use stream collectors